--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    <!-- Home Section Started  -->
     <div id="header">
         <div class="container">
             <nav>
-                <img class="nameLogo" src="hg" alt="NameLog">
+                <img class="nameLogo" src="" alt="">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -24,6 +25,39 @@
             <div class="headerText">
                 <p>Web Developer</p>
                 <h1>Hi, I'am <span>Areeb</span></h1>
+            </div>
+        </div>
+    </div>
+    <!-- Home Section Ended  -->
+    <!-- Aboout Section Started  -->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-cal-1">
+                    <img src="./images/pic.png" alt="about-me-pic">
+                </div>
+                <div class="about-cal-2">
+                    <h1 class="title">Aboout Me</h1>
+                    <p class="para-aboutme">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi?</p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-linkes para-aboutme" onclick="('skills')">Skills</p>
+                        <!-- <p class="tab-links para-aboutme"  onclick="('experience')">Experience</p> -->
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>Web Development</span><br />Web app Development</li>
+                            <li><span>UI/UX</span><br />Designing Web/app interfaces</li>
+                            <li><span>App Development</span><br />Building Android/iOS apps</li>
+                        </ul>
+                    </div>
+                    <!-- <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>Web Development</span><br />Web app Development</li>
+                            <li><span>UI/UX</span><br />Designing Web/app interfaces</li>
+                            <li><span>App Development</span><br />Building Android/iOS apps</li>
+                        </ul>
+                    </div> -->
+                </div>
             </div>
         </div>
     </div>
