Services Section Completed

--- a/index.html
+++ b/index.html
@@ -61,6 +61,35 @@
             </div>
         </div>
     </div>
+    <!-- About Sectioon Ended -->
+    <!-- Services Section Started -->
+    <div id="services">
+        <div class="container">
+            <h1 class="title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-file-code back-color"></i>
+                    <h2 class="back-color">Web Development</h2>
+                    <p class="back-color">Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. A, neque?</p>
+                    <a class="back-color" href="#">Learn more...</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-figma back-color"></i>
+                    <h2 class="back-color">UI/UX Design</h2>
+                    <p class="back-color">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, neque?</p>
+                    <a class="back-color" href="#">Learn more...</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store back-color"></i>
+                    <h2 class="back-color">App Development</h2>
+                    <p class="back-color">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, neque?</p>
+                    <a class="back-color" href="#">Learn more...</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/4e4e1b0627.js" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 
